# maps-to-lead

./: .dockerignore  .env  .env_example  .gitignore  CNAME  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.js  package-lock.json  package.json  server.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  npm-publish.yml  packagist-publish.yml  pypi-publish.yml
Class/: GoogleMaps.js  Parser.js  Validation.js
doc/: postman_collection.json
public/: manager.html
sdk/: .npmignore  LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
sdk-php/: .gitignore  README.md  composer.json  phpunit.xml.dist
sdk-php/examples/: basic.php
sdk-php/src/: FindOptions.php  FindQuery.php  FindWebhook.php  MapsToLead.php  MapsToLeadException.php  Sse.php
sdk-php/tests/: MapsToLeadTest.php  server.php
sdk-python/: .gitignore  README.md  pyproject.toml
sdk-python/examples/: basic.py
sdk-python/src/maps_to_lead/: __init__.py  _sse.py  client.py  errors.py  models.py
sdk-python/tests/: test_client.py
sdk/examples/: basic.ts  export-leads.mjs
sdk/src/: client.ts  errors.ts  index.ts  sse.ts  types.ts
src/: index.ts
src/api/: openapi.ts  server.ts
src/config/: env.ts  logger.ts
src/domain/: scoring.ts  types.ts
src/jobs/: JobRepository.ts  JobStore.ts  SqliteJobRepository.ts  schema.ts
src/parsing/: address.ts  phone.ts  social.ts
src/scraper/: BrowserManager.ts  GoogleMapsScraper.ts  Semaphore.ts  enrich.ts  (+1 more)
tests/: address.test.ts  phone.test.ts  scoring.test.ts  social.test.ts
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+25 files in other folders)
